--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://vedanta:vedanta@cluster.6yfoubg.mongodb.net/bot?retryWrites=true&w=majority/"
+GOOGLE_CLIENT_ID="963727935029-q3qq5p1kci0uvi854gi1r335j4rhn40i.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
