--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.1",
     "axios": "^1.5.1",
     "country-state-city": "^3.2.1",
+    "google-auth-library": "^9.1.0",
     "node-telegram-bot-api": "^0.63.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
